# proj-notionhubpy

./: .gitignore  .settings.yaml  LICENSE  README.md  __main__.py  base_table.py  main.py  notion_api.py  pyproject.toml  requirements.txt  settings.py  settings.yaml
.github/workflows/: ci.yaml
cli/: base_table.py  callbacks.py  custom_dataclasses.py  main.py  notion_api.py  settings.py  utils.py
cli/commands/birthday/: commands.py  table.py
cli/commands/birthdays/: api.py  commands.py  entities.py
cli/commands/projects/: api.py  commands.py  entities.py  table.py
cli/commands/tasks/: api.py  commands.py  entities.py  table.py
commands/birthdays/: commands.py  entities.py  table.py
commands/projects/: commands.py  entities.py  table.py
commands/tasks/: commands.py  entities.py  table.py
tests/: conftest.py  test_birthdays.py  test_projects.py  test_tasks.py  utils.py
