[tool.poetry]
name = "nthub"
version = "0.0.2"
description = "A Notion API wrapper to use with P.A.R.A Method"
authors = ["Nicolas Battisti <battisti@pm.me>"]
readme = "README.md"
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
PyYAML = "^6.0.1"


[tool.poetry.scripts]
nthub = "cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 120
